--- a/Twitch/Cargo.toml
+++ b/Twitch/Cargo.toml
@@ -9,3 +9,10 @@ edition = "2021"
 [dependencies]
 twitch-irc = "3.0.1"
 tokio = { version = "1.17.0", features = ["full"] }
+warp = "0.3.1"
+futures = { version = "0.3.17", default-features = true }
+tokio-amqp = "1.0.0"
+thiserror = "1.0.30"
+deadpool = "0.9.0"
+deadpool-lapin = "0.9.0"
+lapin = "1.8.0"
