--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,18 +19,18 @@ services:
     ports:
       - 8080:8080
     restart: on-failure
-  #youtube:
-  #  image: "exlted2/streamcore-chat-youtube-ingest"
-  #  depends_on:
-  #    - rabbit-mq
-  #  environment:
-  #    - AMPQ_HOST=rabbit-mq
-  #    - AMPQ_PORT=5672
-  #    - AMPQ_USERNAME=guest
-  #    - AMPQ_PASSWORD=guest
-  #    - EXCHANGE_NAME=chat
-  #    # - YT_CHANNEL_ID= # Set to the channel ID you want to listen to
-  #  restart: on-failure
+  youtube:
+    image: "exlted2/streamcore-chat-youtube-ingest"
+    depends_on:
+      - rabbit-mq
+    environment:
+      - AMPQ_HOST=rabbit-mq
+      - AMPQ_PORT=5672
+      - AMPQ_USERNAME=guest
+      - AMPQ_PASSWORD=guest
+      - EXCHANGE_NAME=chat
+      # - YT_CHANNEL_ID= # Set to the channel ID you want to listen to
+    restart: on-failure
   twitch:
     image: "exlted2/streamcore-chat-twitch"
     depends_on:
@@ -41,5 +41,18 @@ services:
       - AMPQ_USERNAME=guest
       - AMPQ_PASSWORD=guest
       - EXCHANGE_NAME=chat
-      - CHANNEL_USERNAME=exlted # Set to the channel ID you want to listen to
+      #- CHANNEL_USERNAME= # Set to the Twitch Username you want to listen to
+    restart: on-failure
+  trovo:
+    image: "exlted2/streamcore-chat-trovo"
+    depends_on:
+      - rabbit-mq
+    environment:
+      - AMPQ_HOST=rabbit-mq
+      - AMPQ_PORT=5672
+      - AMPQ_USERNAME=guest
+      - AMPQ_PASSWORD=guest
+      - EXCHANGE_NAME=chat
+      #- CLIENT_ID= # Provide a Trovo API key to allow Trovo API Access
+      #- CHANNEL_USERNAME= # Set to the Trovo Username you want to listen to
     restart: on-failure
