--- a/.github/workflows/chatui-docker-image.yml
+++ b/.github/workflows/chatui-docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file ChatUI/Dockerfile --tag my-image-name:$(date +%s)
+      run: cd ChatUI; docker build . --file Dockerfile --tag my-image-name:$(date +%s)
