--- a/.github/workflows/chatui-docker-image.yml
+++ b/.github/workflows/chatui-docker-image.yml
@@ -3,8 +3,6 @@ name: Docker Image CI
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
 
@@ -14,5 +12,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: docker/login-action@v2.0.0
+      with: 
+        registry: ghcr.io
+        username: ${{github.repository_owner}}
+        password: ${{secrets.REGISTRY_TOKEN}}
     - name: Build the Docker image
-      run: cd ChatUI; docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      uses: docker/build-push-action@v2
+      with:
+        context: ./ChatUI
+        push: true
+        tags: |
+          ghcr.io/streamcore-chat-ui:${{github.ref}}
+          ghcr.io/streamcore-chat-ui:latest
