Fix tagging again

--- a/.github/workflows/chatui-docker-image.yml
+++ b/.github/workflows/chatui-docker-image.yml
@@ -23,5 +23,5 @@ jobs:
         context: ./ChatUI
         push: true
         tags: |
-          ghcr.io/streamcore-chat-ui:$(date +%s)
+          ghcr.io/streamcore-chat-ui:${{date +%s}}
           ghcr.io/streamcore-chat-ui:latest
