--- a/.github/workflows/chatui-docker-image.yml
+++ b/.github/workflows/chatui-docker-image.yml
@@ -17,11 +17,16 @@ jobs:
         registry: ghcr.io
         username: ${{github.repository_owner}}
         password: ${{secrets.REGISTRY_TOKEN}}
+    - uses: docker/metadata-action@4.0.1
+      with:
+        images: ghcr.io/exlted/streamcore-chat-ui
+        tags: |
+          type=sha
+          rype=raw,value=latest,enable={{is_default_branch}}
     - name: Build the Docker image
       uses: docker/build-push-action@v2
       with:
         context: ./ChatUI
         push: true
-        tags: |
-          ghcr.io/streamcore-chat-ui:${{date +%s}}
-          ghcr.io/streamcore-chat-ui:latest
+        tags: ${{steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
