--- a/.github/workflows/chatui-docker-image.yml
+++ b/.github/workflows/chatui-docker-image.yml
@@ -12,6 +12,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: YassinEldeeb/has-changed-path@v2.1
+      with:
+        paths: ./ChatUI
     - uses: docker/login-action@v2.0.0
       with: 
         registry: ghcr.io
