--- a/.github/workflows/chatui-docker-image.yml
+++ b/.github/workflows/chatui-docker-image.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 5
     - uses: YassinEldeeb/has-changed-path@v2.1
       with:
         paths: ./ChatUI
