--- a/.github/workflows/chatui-docker-image.yml
+++ b/.github/workflows/chatui-docker-image.yml
@@ -15,9 +15,11 @@ jobs:
       with:
         fetch-depth: 5
     - uses: YassinEldeeb/has-changed-path@v2.1
+      id: changed-package
       with:
         paths: ./ChatUI
     - uses: docker/login-action@v2.0.0
+      if: steps.changed-package.outputs.changed == 'true'
       with: 
         registry: ghcr.io
         username: ${{ github.repository_owner }}
