--- a/.github/workflows/chatui-docker-image.yml
+++ b/.github/workflows/chatui-docker-image.yml
@@ -25,6 +25,7 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.REGISTRY_TOKEN }}
     - uses: docker/metadata-action@v4.0.1
+      if: steps.changed-package.outputs.changed == 'true'
       id: meta
       with:
         images: ghcr.io/exlted/streamcore-chat-ui
@@ -32,6 +33,7 @@ jobs:
           type=sha
           rype=raw,value=latest,enable={{is_default_branch}}
     - name: Build the Docker image
+      if: steps.changed-package.outputs.changed == 'true'
       uses: docker/build-push-action@v2
       with:
         context: ./ChatUI
