--- a/.github/workflows/trovo-docker-image.yml
+++ b/.github/workflows/trovo-docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI - Trovo Chat
+name: Trovo Chat CI/CD
 
 on:
   push:
@@ -12,15 +12,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: YassinEldeeb/has-changed-path@v2.1
       with:
-        paths: ./ChatUI
+        fetch-depth: 5
+    - uses: YassinEldeeb/has-changed-path@v2.1
+      id: changed-package
+      with:
+        paths: ./Trovo
     - uses: docker/login-action@v2.0.0
+      if: steps.changed-package.outputs.changed == 'true'
       with: 
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.REGISTRY_TOKEN }}
     - uses: docker/metadata-action@v4.0.1
+      if: steps.changed-package.outputs.changed == 'true'
       id: meta
       with:
         images: ghcr.io/exlted/streamcore-chat-trovo
@@ -29,8 +34,9 @@ jobs:
           rype=raw,value=latest,enable={{is_default_branch}}
     - name: Build the Docker image
       uses: docker/build-push-action@v2
+      if: steps.changed-package.outputs.changed == 'true'
       with:
-        context: ./ChatUI
+        context: ./Trovo
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
