--- a/.github/workflows/trovo-docker-image.yml
+++ b/.github/workflows/trovo-docker-image.yml
@@ -14,12 +14,18 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 5
+    - uses: YassinEldeeb/has-changed-path@v2.1
+      id: changed-package
+      with:
+        paths: ./Trovo
     - uses: docker/login-action@v2.0.0
+      if: steps.changed-package.outputs.changed == 'true'
       with: 
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.REGISTRY_TOKEN }}
     - uses: docker/metadata-action@v4.0.1
+      if: steps.changed-package.outputs.changed == 'true'
       id: meta
       with:
         images: ghcr.io/exlted/streamcore-chat-trovo
@@ -28,6 +34,7 @@ jobs:
           rype=raw,value=latest,enable={{is_default_branch}}
     - name: Build the Docker image
       uses: docker/build-push-action@v2
+      if: steps.changed-package.outputs.changed == 'true'
       with:
         context: ./Trovo
         push: true
