Fix Trovo Build, switch all others to conditional

--- a/.github/workflows/trovo-docker-image.yml
+++ b/.github/workflows/trovo-docker-image.yml
@@ -27,7 +27,7 @@ jobs:
           type=sha
           rype=raw,value=latest,enable={{is_default_branch}}
     - name: Build the Docker image
-      uses: docker/build-push-action@v2zs
+      uses: docker/build-push-action@v2
       with:
         context: ./Trovo
         push: true
