--- a/Trovo/Cargo.toml
+++ b/Trovo/Cargo.toml
@@ -11,8 +11,8 @@ trovo = "0.4.0"
 tokio = { version = "1.17.0", features = ["full"] }
 tokio-amqp = "1.0.0"
 amiquip = "0.4.2"
-serde = "1.0.137"
 serde_json = "1.0.81"
 futures-util = "0.3.21"
 regex = "1"
 lazy_static = "1"
+chat_objects = { path = "~/../../Shared_Code/Rust/chat_objects" }
