--- a/Twitch/Cargo.toml
+++ b/Twitch/Cargo.toml
@@ -12,5 +12,5 @@ tokio = { version = "1.17.0", features = ["full"] }
 warp = "0.3.1"
 futures = { version = "0.3.17", default-features = true }
 amiquip = "0.4.2"
-serde = "1.0.137"
 serde_json = "1.0.81"
+chat_objects = { path = "~/../../Shared_Code/Rust/chat_objects" }
