--- a/.github/workflows/publish-docker-images.yml
+++ b/.github/workflows/publish-docker-images.yml
@@ -1,13 +1,17 @@
-name: Trovo Chat CI/CD
+name: Publish Docker Image
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_call:
+    inputs:
+      path:
+        required: true
+        type: string
+      image_name:
+        required: true
+        type: string
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -17,7 +21,7 @@ jobs:
     - uses: YassinEldeeb/has-changed-path@v2.1
       id: changed-package
       with:
-        paths: ./Trovo
+        paths: ${{ inputs.path }}
     - uses: docker/login-action@v2.0.0
       if: steps.changed-package.outputs.changed == 'true'
       with: 
@@ -28,7 +32,7 @@ jobs:
       if: steps.changed-package.outputs.changed == 'true'
       id: meta
       with:
-        images: ghcr.io/exlted/streamcore-chat-trovo
+        images: ${{ inputs.image_name }}
         tags: |
           type=sha
           rype=raw,value=latest,enable={{is_default_branch}}
@@ -36,7 +40,7 @@ jobs:
       uses: docker/build-push-action@v2
       if: steps.changed-package.outputs.changed == 'true'
       with:
-        context: ./Trovo
+        context: ${{ inputs.path }}
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
