--- a/Shared_Code/Rust/chat_objects/Cargo.toml
+++ b/Shared_Code/Rust/chat_objects/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "chat_objects"
 version = "0.1.0"
+authors = ["exlted <exltedofdrg@gmail.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
