--- a/Trovo/Cargo.toml
+++ b/Trovo/Cargo.toml
@@ -15,4 +15,4 @@ serde_json = "1.0.81"
 futures-util = "0.3.21"
 regex = "1"
 lazy_static = "1"
-chat_objects = "~0"
+streamcore_chat_objects = "~0"
