--- a/Twitch/Cargo.toml
+++ b/Twitch/Cargo.toml
@@ -13,4 +13,4 @@ warp = "0.3.1"
 futures = { version = "0.3.17", default-features = true }
 amiquip = "0.4.2"
 serde_json = "1.0.81"
-chat_objects = "~0"
+streamcore_chat_objects = "~0"
