#34 Rework YT Ingest to handle messages better

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - AMPQ_PASSWORD=guest
       - EXCHANGE_NAME=chat
       # - YT_CHANNEL_ID= # Set to the channel ID you want to listen to
+      # - CHECK_FOR_LIVE_INTERVAL= # Set to the number of millis you want to sleep between live checks
     restart: on-failure
   twitch:
     image: "ghcr.io/exlted/streamcore-chat-twitch"
