--- a/Youtube/package.json
+++ b/Youtube/package.json
@@ -9,6 +9,9 @@
     },
     "dependencies": {
         "amqplib": "0.10.0",
-        "axios": "0.27.2"
+        "axios": "0.27.2",
+        "puppeteer": "^15.5.0",
+        "puppeteer-extra": "^3.3.4",
+        "puppeteer-extra-plugin-stealth": "^2.11.0"
     }
 }
