--- a/ChatUI/.dockerignore
+++ b/ChatUI/.dockerignore
@@ -1,9 +1,11 @@
+Dockerfile*
+docker-compose*
 .dockerignore
-Dockerfile
-build/
-.dart_tool/
-.git/
-.github/
+.git
 .gitignore
-.packages
+*/bin
+*/obj
+README.md
+LICENSE
 .vscode
+target
