--- a/Trovo/Cargo.toml
+++ b/Trovo/Cargo.toml
@@ -8,12 +8,11 @@ edition = "2021"
 
 [dependencies]
 trovo = "0.5.0"
-tokio = { version = "1.17.0", features = ["full"] }
-tokio-amqp = "1.0.0"
-amiquip = "0.4.2"
+tokio = { version = "1.17.0" }
 serde_json = "1.0.81"
 futures-util = "0.3.21"
 regex = "1"
 lazy_static = "1"
 streamcore_chat_objects = "~0"
 chrono = "0.4"
+streamcore_message_client = "~0"
