--- a/Twitch/Cargo.toml
+++ b/Twitch/Cargo.toml
@@ -7,10 +7,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-twitch-irc = "3.0.1"
+twitch-irc = "5.0.0"
 tokio = { version = "1.17.0", features = ["full"] }
 warp = "0.3.1"
 futures = { version = "0.3.17", default-features = true }
-amiquip = "0.4.2"
 serde_json = "1.0.81"
 streamcore_chat_objects = "~0"
+streamcore_message_client = "~0"
+async-trait = "0.1.72"
