--- a/ChatUI/Cargo.toml
+++ b/ChatUI/Cargo.toml
@@ -13,5 +13,5 @@ tokio = { version = "1.17.0", features = ["full"] }
 tokio-stream = "0.1.6"
 futures = { version = "0.3.17", default-features = true }
 uuid = { version = "0.4", features = ["serde", "v4"] }
-streamcore_message_client = "~0"
+streamcore_message_client = {version = "0.1.2", path = "../Shared_Code/Rust/message_client" }
 async-trait = "0.1.72"
