Add VStream Support
Note: VStream Support is limited and requires you to POST to localhost:3030/v1/config
That POST needs to include a header of "Content Type": "application/json" and a body of "{"key": "stream_id", "val": "<VStream Stream ID>>"}"

--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -37,6 +37,16 @@ jobs:
       username: ${{ github.repository_owner }}
       password: ${{ secrets.REGISTRY_TOKEN }}
 
+  build-vstream:
+    needs: [build-chat_objects, build-message_client]
+    uses: ./.github/workflows/publish-docker-images.yml
+    with:
+      path: ./VStream
+      image_name: ghcr.io/exlted/streamcore-chat-vstream
+    secrets:
+      username: ${{ github.repository_owner }}
+      password: ${{ secrets.REGISTRY_TOKEN }}
+
   build-youtube:
     uses: ./.github/workflows/publish-docker-images.yml
     with:
