--- a/VStream/Cargo.toml
+++ b/VStream/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 warp = "0.3.2"
-streamcore_chat_objects = { path = "../Shared_Code/Rust/chat_objects", version = "0.1.3"}
+streamcore_chat_objects = "0.1.3"
 streamcore_message_client = "~0"
 serde_json = "1.0.81"
 tokio = { version = "1.17.0", features = ["full"] }
