--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,3 +57,18 @@ services:
       #- CLIENT_ID= # Provide a Trovo API key to allow Trovo API Access
       #- CHANNEL_USERNAME= # Set to the Trovo Username you want to listen to
     restart: on-failure
+  vstream:
+    image: "ghcr.io/exlted/streamcore-chat-vstream"
+    depends_on:
+      - rabbit-mq
+    environment:
+      - AMPQ_HOST=rabbit-mq
+      - AMPQ_PORT=5672
+      - AMPQ_USERNAME=guest
+      - AMPQ_PASSWORD=guest
+      - EXCHANGE_NAME=chat
+      #- CLIENT_ID= # Provide a Trovo API key to allow Trovo API Access
+      #- CHANNEL_USERNAME= # Set to the Trovo Username you want to listen to
+    restart: on-failure
+    ports:
+      - 8081:8081
