--- a/Trovo/Cargo.toml
+++ b/Trovo/Cargo.toml
@@ -14,5 +14,5 @@ futures-util = "0.3.21"
 regex = "1"
 lazy_static = "1"
 streamcore_chat_objects = "~0"
+streamcore_message_client = "0.1.3"
 chrono = "0.4"
-streamcore_message_client = "~0"
