--- a/Twitch/Cargo.toml
+++ b/Twitch/Cargo.toml
@@ -13,5 +13,5 @@ warp = "0.3.1"
 futures = { version = "0.3.17", default-features = true }
 serde_json = "1.0.81"
 streamcore_chat_objects = "~0"
-streamcore_message_client = "~0"
+streamcore_message_client = "0.1.3"
 async-trait = "0.1.72"
