--- a/VStream/Cargo.toml
+++ b/VStream/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 warp = "0.3.2"
 streamcore_chat_objects = "0.1.3"
-streamcore_message_client = "~0"
+streamcore_message_client = "0.1.3"
 serde_json = "1.0.81"
 tokio = { version = "1.17.0", features = ["full"] }
 tokio-stream = "0.1.6"
