--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -56,6 +56,15 @@ jobs:
       username: ${{ github.repository_owner }}
       password: ${{ secrets.REGISTRY_TOKEN }}
 
+  build-youtube-rewrite:
+    uses: ./.github/workflows/publish-docker-images.yml
+    with:
+      path: ./Youtube_Rewrite
+      image_name: ghcr.io/exlted/streamcore-chat-youtube-ingest-rust-test
+    secrets:
+      username: ${{ github.repository_owner }}
+      password: ${{ secrets.REGISTRY_TOKEN }}
+
   build-chatui:
     needs: [build-chat_objects, build-message_client]
     uses: ./.github/workflows/publish-docker-images.yml
