--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -57,6 +57,7 @@ jobs:
       password: ${{ secrets.REGISTRY_TOKEN }}
 
   build-youtube-rewrite:
+    needs: [build-chat_objects, build-message_client]
     uses: ./.github/workflows/publish-docker-images.yml
     with:
       path: ./Youtube
