--- a/Youtube_Rewrite/Dockerfile
+++ b/Youtube_Rewrite/Dockerfile
@@ -12,7 +12,10 @@ COPY . .
 RUN cargo build --release
 
 # second stage.
-FROM gcr.io/distroless/cc-debian11 AS runtime
+FROM debian:latest AS runtime
+
+RUN apt-get update && apt-get install -y libssl && apt clean && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 COPY --from=builder /target/release/streamcore_youtube_chat_ingest /
 COPY --from=builder /public/* /public/
