--- a/Youtube/.dockerignore
+++ b/Youtube/.dockerignore
@@ -1,2 +1,11 @@
-node_modules
-npm-debug.log
+Dockerfile*
+docker-compose*
+.dockerignore
+.git
+.gitignore
+*/bin
+*/obj
+README.md
+LICENSE
+.vscode
+target
