Fix Youtube Build Action

--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -48,6 +48,7 @@ jobs:
       password: ${{ secrets.REGISTRY_TOKEN }}
 
   build-youtube:
+    needs: [build-chat_objects, build-message_client]
     uses: ./.github/workflows/publish-docker-images.yml
     with:
       path: ./Youtube
