--- a/ChatUI/Dockerfile
+++ b/ChatUI/Dockerfile
@@ -5,7 +5,7 @@ COPY . .
 RUN cargo install --path .
 
 # second stage.
-FROM gcr.io/distroless/cc-debian11
+FROM debian:bookworm-slim
 COPY --from=builder /usr/local/cargo/bin/* /
 COPY --from=builder /public/* /public/
 
